<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Banco_ALVIGA</string>
    <string name="bottom_bank">bottom_Bank</string>
    <string name="iniciar_sesion">INCIAR SESIÓN</string>
    <string name="introduce_el_usuario">Introduce el usuario</string>
    <string name="obligatorio">Obligatorio</string>
    <string name="introduce_la_contrasena">Introduce la contraseña</string>
    <string name="entrar">ACCEDER</string>
    <string name="salir">SALIR</string>
    <string name="posicionGlobal">POSICIÓN GLOBAL</string>
    <string name="movimientos">MOVIMIENTOS</string>
    <string name="transferencias">TRANSFERENCIAS</string>
    <string name="cambiar_contrase_a">CAMBIAR CONTRASEÑA</string>
    <string name="promociones">PROMOCIONES</string>
    <string name="cajeros">CAJEROS</string>
    <string name="gestion_de_constrasena">GESTION DE CONSTRASEÑA</string>
    <string name="introduce_tu_contrasena">Introduce tu contraseña</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="repite_tu_nueva_contrasena">Repite nueva contraseña</string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="volver">VOLVER</string>
    <string name="usuario_n">Usuario </string>
    <string name="bienvenido_a">Bienvenido/a</string>
    <string name="nif">NIF</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Email</string>
    <string name="registrar_nuevo_usuraio">Registrar nuevo usuraio</string>
    <string name="nuevo">NUEVO</string>
    <string name="cuenta_origen">Cuenta origen</string>
    <string name="introduce_el_numero">Introduce el numero</string>
    <string name="cantidad">Cantidad</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="movimientos_min">Movimientos</string>
    <string name="selecciona_la_cuenta">Selecciona la cuenta:</string>
    <string name="ultimos_movimientos">Últimos movimientos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="detalles_del_movimiento">Detalles del movimiento</string>
    <string name="home">HOME</string>
    <string name="configuracion">CONFIGURACION</string>
    <string name="logout">LOGOUT</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="multimedia">Multimedia</string>
    <string name="idioma">Idioma</string>
    <string name="selecciona_el_idioma">Selecciona el idioma</string>
    <string name="idioma_de_la_aplicaci_n">Idioma de la aplicación</string>
    <string name="datos">Datos</string>
    <string name="origen_de_los_datos">Origen de los datos</string>
    <string name="selecciona_el_origen">Selecciona el origen</string>
    <string name="musica">Musica</string>
    <string name="video_de_bienvenida">Video de bienvenida</string>
    <string name="no_reproducir_musica">No reproducir musica</string>
    <string name="reproducir_musica">Reproducir musica</string>
    <string name="no_reproducir_el_video_de_bienvenida">No reproducir el video de bienvenida</string>
    <string name="reproducir_el_video_de_bienvenida">Reproducir el video de bienvenida</string>
    <string name="a_adir">AÑADIR</string>
    <string name="mapas">MAPAS</string>
    <string name="selecciona_el_cajero">Selecciona el cajero:</string>
    <string name="administracion">ADMINISTRACION</string>
    <string name="direccion">Direccion</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="guardar">Guardar</string>
    <string name="cajero">Cajero</string>
    <string name="rellenar_campos">Debes rellenar todos los campos</string>


</resources>