<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/multimedia"
        app:icon="@drawable/baseline_music_note_24">


        <SwitchPreferenceCompat
            app:key="reproducirMusica"
            app:summaryOff="@string/no_reproducir_musica"
            app:summaryOn="@string/reproducir_musica"
            app:title="@string/musica">
        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:key="reproducirVideo"
            app:summaryOff="@string/no_reproducir_el_video_de_bienvenida"
            app:summaryOn="@string/reproducir_el_video_de_bienvenida"
            app:title="@string/video_de_bienvenida">
        </SwitchPreferenceCompat>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/idioma"
        app:icon="@drawable/baseline_language_24">

        <ListPreference
            app:key="idioma"
            app:title="@string/idioma_de_la_aplicaci_n"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/selecciona_el_idioma"
            app:entries="@array/idioma"
            app:entryValues="@array/codigoidioma"
            app:defaultValue="ESP">
        </ListPreference>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/datos"
        app:icon="@drawable/baseline_cloud_24">

        <ListPreference
            app:key="datos"
            app:title="@string/origen_de_los_datos"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/selecciona_el_origen"
            app:entries="@array/datos"
            app:entryValues="@array/codigodatos"
            app:defaultValue="LCL">
        </ListPreference>

    </PreferenceCategory>

</PreferenceScreen>