<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home">
        </item>

        <item
            android:id="@+id/nav_posicion"
            android:icon="@drawable/baseline_panorama_photosphere_24"
            android:title="@string/posicionGlobal">
        </item>

        <item
            android:id="@+id/nav_movimientos"
            android:icon="@drawable/baseline_balance_24"
            android:title="@string/movimientos">
        </item>

        <item
            android:id="@+id/nav_transferencias"
            android:icon="@drawable/baseline_currency_exchange_24"
            android:title="@string/transferencias">
        </item>

        <item
            android:id="@+id/nav_cambiar_contra"
            android:icon="@drawable/baseline_change_circle_24"
            android:title="@string/cambiar_contrase_a">
        </item>

        <item
            android:id="@+id/nav_promociones"
            android:icon="@drawable/baseline_bolt_24"
            android:title="@string/promociones">
        </item>

        <item
            android:id="@+id/nav_cajeros"
            android:icon="@drawable/baseline_currency_bitcoin_24"
            android:title="@string/cajeros">
        </item>

        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/configuracion">
        </item>

    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout">

            </item>
        </menu>


    </item>


</menu>