<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cambiarClave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CambiarClaveActivity"
    android:background="@drawable/bitbackground">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    </View>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/gestion_de_constrasena"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="290dp"
        android:layout_height="2dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="-4dp"
        android:background="#2196F3"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/editTextPasswordOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="@string/introduce_la_contrasena"
        android:inputType="textPassword"
        android:textColorHint="@color/mygrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
            android:id="@+id/editTextPasswordnew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/nueva_contrasena"
            android:textColorHint="@color/mygrey"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordOld" />


        <EditText
            android:id="@+id/editTextPasswordnew2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/repite_tu_nueva_contrasena"
            android:textColorHint="@color/mygrey"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordnew" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:text="@string/usuario_n"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="@color/mygrey"
        android:text="@string/guardar_cambios"

        android:textColor="#040A24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="20dp"
        android:text="@string/salir"
        android:textColor="#00041D"

        android:backgroundTint="@color/mygrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />


</androidx.constraintlayout.widget.ConstraintLayout>