<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bitbackground">


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/mygrey"
        app:navigationIcon="@drawable/ic_menu">

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_bank"
        android:src="@drawable/baseline_account_balance_24"
        app:layout_anchor="@id/bottomAppBar">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="320sp"
        android:layout_height="100sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#AAA6A6">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/imgavatar" />

        <TextView
            android:id="@+id/tvBienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="20dp"
            android:text="@string/bienvenido_a"
            android:textColor="#0B122F"
            android:textSize="20dp" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320sp"
        android:layout_height="444dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">


        <Button
            android:id="@+id/buttonposition"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:text="@string/posicionGlobal"
            android:textColor="#0B122F"
            android:backgroundTint="@color/mygrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/buttonmovimientos"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="60dp"
            android:text="@string/movimientos"
            android:textColor="#0B122F"
            android:backgroundTint="@color/mygrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonposition"
            />


        <Button
            android:id="@+id/buttontransferencias"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="60dp"
            android:text="@string/transferencias"
            android:textColor="#0B122F"
            android:backgroundTint="@color/mygrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonmovimientos" />


        <Button
            android:id="@+id/buttoncambiarContra"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="60dp"
            android:text="@string/cambiar_contrase_a"
            android:backgroundTint="@color/mygrey"
            android:textColor="#0B122F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttontransferencias" />


        <Button
            android:id="@+id/buttonpromociones"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="60dp"
            android:text="@string/promociones"
            android:textColor="#0B122F"
            android:backgroundTint="@color/mygrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttoncambiarContra" />


        <Button
            android:id="@+id/buttoncajeros"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="60dp"
            android:text="@string/cajeros"
            android:textColor="#0B122F"
            android:backgroundTint="@color/mygrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonpromociones" />


        <Button
            android:id="@+id/buttonsalir"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="60dp"
            android:text="@string/salir"
            android:textColor="#0B122F"
            android:backgroundTint="@color/mygrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttoncajeros" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>